# subsuku

./: .env  .gitignore  README.md  biome.jsonc  bun.lockb  cspell.json  drizzle.config.ts  happydom.ts  middleware.ts  netlify.toml  next.config.js  next.config.mjs  open-next.config.ts  package.json  tsconfig.json  wrangler.toml
app/: globals.css  layout.tsx  page.tsx
components/: url.ts
db/: index.ts  schema.ts  seed.ts  (+1 more)
internal/api/: Cargo.toml
internal/api/src/: application_service.rs  cancellation_method.rs  main.rs  notification.rs  subscription.rs  user.rs
internal/api/src/application_service/: cancellation_method_reader.rs  cancellation_method_writer.rs  notification_reader.rs  subscription_reader.rs  subscription_writer.rs  user_writer.rs
internal/api/src/cancellation_method/: cancellation_method_reader.rs  cancellation_method_writer.rs
internal/api/src/common/: authorize.rs
internal/api/src/notification/: notification_dto.rs  notification_reader.rs
internal/api/src/subscription/: subscription_dto.rs  subscription_reader.rs  subscription_registration_form_dto.rs  subscription_writer.rs
internal/api/src/user/: user_writer.rs
internal/infrastructure/: Cargo.toml
internal/infrastructure/src/: common.rs  lib.rs  notification.rs  subscription.rs
internal/infrastructure/src/common/: sqlx.rs  user.rs
internal/infrastructure/src/notification/: notification_query_repository.rs  notification_row.rs
internal/infrastructure/src/subscription/: subscription_command_repository.rs  subscription_query_repository.rs  subscription_row.rs
(+372 files in other folders)
