[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
chrono = "0.4.41"
uuid = "1.2.2"
