[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = "1.2.2"
